--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@
   padding-bottom: 6px;
   padding-right: 15px;
   padding-left: 15px;
+  text-decoration: none;
 }
 .main__menu-link--active{
   border: 2px solid #b8ffec;
