--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
   font-family: 'TTLakes', sans-serif;
 }
 
+/*--------------------------------------------*/
+
 @font-face {
   font-family: 'TTLakes';
   src: url('fonts/TTLakes-Bold.woff2') format('woff2');
