--- a/header.css
+++ b/header.css
@@ -8,7 +8,7 @@
   padding-top: 19px;
   padding-bottom: 19px;
 }
-.link{
+.header__menu-link{
   width: 40px;
   height: 40px;
   background-color: #FF3E79;
