--- a/components/aside-menu/aside-menu.html
+++ b/components/aside-menu/aside-menu.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="aside-menu-style.css">
   <link rel="stylesheet" href="aside-menu-Header.css">
   <link rel="stylesheet" href="aside-menu-Main.css">
+  <link rel="stylesheet" href="aside-menu-Footer.css">
 </head>
 <body>
   <header class="header-aside-menu">
@@ -101,17 +102,17 @@
         </li>
       </ul>
     </nav>
-    <article class="footer-aside-menu__data">
-      <a class="footer-aside-menu__mail" href="/">
+    <article class="footer-aside-data">
+      <a class="footer-aside-data__link footer-aside-data__link--mail" href="/">
         mail@cps.com
       </a>
-      <a class="footer-aside-menu__tel" href="tel+8 800 890 8900">
+      <a class="footer-aside-data__link footer-aside-data__link--tel" href="tel+8 800 890 8900">
         8 800 890 8900
       </a>
     </article>
     <ul class="lang-list">
       <li class="lang-list__item">
-        <button class="lang-list__button" type="button">
+        <button class="lang-list__button lang-list__button--active" type="button">
           RU
         </button>
       </li>
