--- a/docs/aside-menu-style.css
+++ b/docs/aside-menu-style.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'TTLakes';
-  src: url('/fonts/TTLakes-Bold.woff2') format('woff2');
+  src: url('TTLakes-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 } /* Подключение шрифтов */
 @font-face {
   font-family: 'TTLakes';
-  src: url('/fonts/TTLakes-Regular.woff2') format('woff2');
+  src: url('TTLakes-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'TTLakes';
-  src: url('/fonts/TTLakes-Medium.woff2') format('woff2');
+  src: url('TTLakes-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
